Test/git-issues/git-issue-981e.dfy.expect
git-issue-981e.dfy(21,9): Error: duplicate name of export set: E
1 resolution/type errors detected in git-issue-981e.dfy
